--- a/source/app/stylesheets/playlist/ui/_modalGallery.scss
+++ b/source/app/stylesheets/playlist/ui/_modalGallery.scss
@@ -138,6 +138,7 @@
 	}
 
 	#scroll-indicator{
+		display: none;
 		position: absolute;
 		bottom: 0;
 		width: 100%;
